<resources>
    <string name="app_name">Kaizen Shopping &amp; Online Store </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_Name">Enter Mobile</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_pinCode">Enter Pin Code</string>
    <string name="enter_Address">Address (House No,Building,Street,Area)</string>
    <string name="enter_locality">Locality / Town</string>
    <string name="enter_State">Enter State</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_number">Enter Mobile  Number</string>
    <string name="enter_password">Enter Password</string>
</resources>